--- a/index.htm
+++ b/index.htm
@@ -134,9 +134,9 @@
 					<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
 			    </ul>
 			</div>
-			<div class="row">
-				<div class="col l10 s12 m9">
-					<div class="map_area" >
+			<div class="row fill">
+				<div class="col l10 s12 m9 fill">
+					<div class="map_area fill" >
 						<div id="map-canvas"></div>
 					</div>
       			</div>
