--- a/index.htm
+++ b/index.htm
@@ -1,185 +1,206 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-		<!--Import Google Icon Font-->
-		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<!--Import materialize.css-->
- 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+	  <!DOCTYPE html>
+	  <html>
+	  <head>
+	  	<!--Import Google Icon Font-->
+	  	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	  	<!--Import materialize.css-->
+	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css" media="screen,projection"/>
 
-		<!--Let browser know website is optimized for mobile-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+	  	<!--Let browser know website is optimized for mobile-->
+	  	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-		<link type="text/css" rel="stylesheet" href="styles.css"/>
-    </head>
+	  	<link type="text/css" rel="stylesheet" href="styles.css"/>
+	  </head>
 
-    <body>
-		<!--Import jQuery before materialize.js-->
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-		 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV0GOd8rYpjvPAQ6vmpIss_wPKyH8CC_A&libraries=places&sensor=TRUE"></script>
-		<header>
-			<nav class="topnav">
-				<div class="nav-wrapper">
-					<a href="#!" class="brand-logo topNavInner">AIS Google</a>
-					<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons iconpoint">menu</i></a>
-					<ul class="left hide-on-med-and-down topmenusecond topNavInner">
-						<li><a href="http://www.flightradar24.com/15.93,104.49/6"><i class="material-icons left iconpoint tiny">navigation</i>Airplane</a></li>
-						<li><a href="http://maritech.com.vn/vi/ais-google/hoi-dap-ve-ais-google"><i class="material-icons left iconpoint">question_answer</i>Faq</a></li>
-						<li><a href="mailto:ais-service@maritech.com.vn"><i class="material-icons left iconpoint">chat_bubble_outline</i>Feedback</a></li>
-						<li><a class="modal-trigger" href="#modalpositions"><i class="material-icons left iconpoint">location_on</i>Positions</a></li>
-						<li><a class="modal-trigger" href="#modalutilities"><i class="material-icons left iconpoint">view_module</i>Utilities</a></li>
-					</ul>
-					<ul id="dropdowntool" class="dropdown-content">
-						<li><a href="#!">Vessel</a></li>
-						<li><a href="#!">Share Data</a></li>
-						<li><a href="#!">Bouy</a></li>
-					</ul>
-					<ul class="right topmenusecond topNavInner">
-						<li class="hide-on-med-and-down"><a href="#tool" data-activates="dropdowntool" class="dropdown-button">Tool<i class="material-icons right iconpoint">arrow_drop_down</i></a></li>
-						<li class="search"> <a href="#top" class="activeSearch"> <i class="material-icons iconpoint">search</i> </a></li>
-						<li class="hide-on-med-and-down"> <a href="#modallogin" class="modal-trigger"> <i class="material-icons iconpoint">perm_identity</i></a></li>
-					</ul>
-					<ul class="side-nav" id="mobile-demo">
-						<li><a class="modal-trigger" href="#modallogin">Login</a></li>
-			        	<li><a href="http://www.flightradar24.com/15.93,104.49/6">Airplane</a></li>
-						<li><a href="http://maritech.com.vn/vi/ais-google/hoi-dap-ve-ais-google">Faq</a></li>
-						<li><a href="mailto:ais-service@maritech.com.vn">Feedback</a></li>
-						<li><a class="modal-trigger" href="#modaltools">Tools</a></li>
-						<li><a class="modal-trigger" href="#modalpositions">Positions</a></li>
-						<li><a class="modal-trigger" href="#modalutilities">Utilities</a></li>
-			      	</ul>
-		    	</div>
-		  	</nav>
+	  <body>
+	  	<!--Import jQuery before materialize.js-->
+	  	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+	  	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV0GOd8rYpjvPAQ6vmpIss_wPKyH8CC_A&libraries=places&sensor=TRUE"></script>
+	  	<header>
+	  		<nav class="topnav">
+	  			<div class="nav-wrapper">
+	  				<a href="#!" class="brand-logo topNavInner">AIS Google</a>
+	  				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons iconpoint">menu</i></a>
+	  				<ul class="left hide-on-med-and-down topmenusecond topNavInner">
+	  					<li><a href="http://www.flightradar24.com/15.93,104.49/6"><i class="material-icons left iconpoint tiny">navigation</i>Airplane</a></li>
+	  					<li><a href="http://maritech.com.vn/vi/ais-google/hoi-dap-ve-ais-google"><i class="material-icons left iconpoint">question_answer</i>Faq</a></li>
+	  					<li><a href="mailto:ais-service@maritech.com.vn"><i class="material-icons left iconpoint">chat_bubble_outline</i>Feedback</a></li>
+	  					<li><a class="modal-trigger" href="#modalpositions"><i class="material-icons left iconpoint">location_on</i>Positions</a></li>
+	  					<li><a class="modal-trigger" href="#modalutilities"><i class="material-icons left iconpoint">view_module</i>Utilities</a></li>
+	  				</ul>
+	  				<ul id="dropdowntool" class="dropdown-content">
+	  					<li><a href="#!">Vessel</a></li>
+	  					<li><a href="#!">Share Data</a></li>
+	  					<li><a href="#!">Bouy</a></li>
+	  				</ul>
+	  				<ul class="right topNavInner">
+	  					<li class="hide-on-med-and-down"><a href="#tool" data-activates="dropdowntool" class="dropdown-button">Tool<i class="material-icons right iconpoint">arrow_drop_down</i></a></li>
+	  					<li class="search"> <a href="#top" class="activeSearch"> <i class="material-icons iconpoint">search</i> </a></li>
+	  					<li class="hide-on-med-and-down"> <a href="#modallogin" class="modal-trigger"> <i class="material-icons iconpoint">perm_identity</i></a></li>
+	  				</ul>
+	  				<ul class="side-nav" id="mobile-demo">
+	  					<li><a class="modal-trigger" href="#modallogin">Login</a></li>
+	  					<li><a href="http://www.flightradar24.com/15.93,104.49/6">Airplane</a></li>
+	  					<li><a href="http://maritech.com.vn/vi/ais-google/hoi-dap-ve-ais-google">Faq</a></li>
+	  					<li><a href="mailto:ais-service@maritech.com.vn">Feedback</a></li>
+	  					<li><a class="modal-trigger" href="#modaltools">Tools</a></li>
+	  					<li><a class="modal-trigger" href="#modalpositions">Positions</a></li>
+	  					<li><a class="modal-trigger" href="#modalutilities">Utilities</a></li>
+	  				</ul>
+	  			</div>
+	  		</nav>
 
-		  	<nav id="search-nav" style="display:none;">
-		  		<div class="nav-wrapper lightblue accent-4 topNavInner">
-		  			<form id="search_mini_form" action="http://rdxsports.com/catalogsearch/result/" method="get">
-	        			<div class="input-field topNavInner">
-		          			<input id="search" type="search" placeholder="MMSI, IMO or Name" type="text" class="input-text snize-input-style">
-		          			<label for="search"><i class="material-icons iconpoint">search</i></label>
-		          			<i class="material-icons closesearch iconpoint">close</i>
-						</div>
-					</form>
-				</div>
-			</nav>
+	  		<nav id="search-nav" style="display:none;">
+	  			<div class="nav-wrapper lightblue accent-4 topNavInner">
+	  				<form id="search_mini_form" action="http://rdxsports.com/catalogsearch/result/" method="get">
+	  					<div class="input-field topNavInner">
+	  						<input id="search" type="search" placeholder="MMSI, IMO or Name" type="text" class="input-text snize-input-style">
+	  						<label for="search"><i class="material-icons iconpoint">search</i></label>
+	  						<i class="material-icons closesearch iconpoint">close</i>
+	  					</div>
+	  				</form>
+	  			</div>
+	  		</nav>
 
-			<div id="modalpositions" class="modal bottom-sheet">
-    			<div class="modal-content">
-			    	<h4>List of positions</h4>
-			    	<p>A bunch of text</p>
-	    		</div>	    		
-  			</div>
-  			<div id="modalutilities" class="modal bottom-sheet">
-    			<div class="modal-content">
-			    	<h4>Utilities</h4>
-			    	<p>A bunch of text</p>
-	    		</div>	    		
-  			</div>
-  			<div id="modaltools" class="modal bottom-sheet">
-    			<div class="modal-content">
-			    	<h4>Tools</h4>
-			    	<p>A bunch of text</p>
-	    		</div>	    		
-  			</div>
+	  		<div id="modalpositions" class="modal bottom-sheet">
+	  			<div class="modal-content">
+	  				<h4>List of positions</h4>
+	  				<p>A bunch of text</p>
+	  			</div>	    		
+	  		</div>
+	  		<div id="modalutilities" class="modal bottom-sheet">
+	  			<div class="modal-content">
+	  				<h4>Utilities</h4>
+	  				<p>A bunch of text</p>
+	  			</div>	    		
+	  		</div>
+	  		<div id="modaltools" class="modal bottom-sheet">
+	  			<div class="modal-content">
+	  				<h4>Tools</h4>
+	  				<p>A bunch of text</p>
+	  			</div>	    		
+	  		</div>
 
-  			<!-- login form -->
-  			<div id="modallogin" class="modal">
-  				<div class="modal-content">	  
-  					<nav class="blue">
-  						<div class="nav-wrapper">
-  							<a href="#" class="brand-logo">Login</a>
-  							<ul class="right">
-  								<li><a href="#" class="button-close modal-action modal-close"><i class="material-icons">close</i></a></li>
-  							</ul>
-  						</div>
-  					</nav>   
-  				</div>
-  				<div class="model-email-content">	   			
-	      			<div class="row">
-					    <form class="col s12">
-					     	<div class="row">
-					        	<div class="input-field col s12">
-					        		<i class="material-icons prefix">email</i>
-					          		<input id="email" type="email" class="validate">
-					          		<label for="email">Email</label>
-					        	</div>
-					      	</div>
-					      	<div class="row">
-					        	<div class="input-field col s12">
-					        		<i class="material-icons prefix">lock</i>
-					          		<input id="password" type="password" class="validate">
-					          		<label for="password">Password</label>
-					        	</div>
-					    	</div>
-					      
-					    </form>
-					  </div>
-	    		</div>
-			    <div class="modal-footer">
-			      	<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Login</a>
-			    </div>
-  			</div>
-		</header>
-		<main>
-			<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-				<a class="btn-floating btn-large red tooltipped" data-position="left" data-delay="50" data-tooltip="I am tooltip">
-					<i class="large material-icons">settings</i>
-				</a>
-				<ul>
-					<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-					<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-					<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-					<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-			    </ul>
-			</div>
-			<div class="row fill">
-				<div class="col l10 s12 m9 fill">
-					<div class="map_area fill" >
-						<div id="map-canvas"></div>
-					</div>
-      			</div>
+	  		<!-- login form -->
+	  		<div id="modallogin" class="modal">
+	  			<div class="modal-content">	  
+	  				<nav class="blue">
+	  					<div class="nav-wrapper">
+	  						<a href="#" class="brand-logo">Login</a>
+	  						<ul class="right">
+	  							<li><a href="#" class="button-close modal-action modal-close"><i class="material-icons">close</i></a></li>
+	  						</ul>
+	  					</div>
+	  				</nav>   
+	  			</div>
+	  			<div class="model-email-content">	   			
+	  				<div class="row">
+	  					<form class="col s12">
+	  						<div class="row">
+	  							<div class="input-field col s12">
+	  								<i class="material-icons prefix">email</i>
+	  								<input id="email" type="email" class="validate">
+	  								<label for="email">Email</label>
+	  							</div>
+	  						</div>
+	  						<div class="row">
+	  							<div class="input-field col s12">
+	  								<i class="material-icons prefix">lock</i>
+	  								<input id="password" type="password" class="validate">
+	  								<label for="password">Password</label>
+	  							</div>
+	  						</div>
 
-      			<div class="col l2 m3">
+	  					</form>
+	  				</div>
+	  			</div>
+	  			<div class="modal-footer">
+	  				<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Login</a>
+	  			</div>
+	  		</div>
+	  		<div class="clr"></div>
+	  	</header>
+	  	<main>
+	  		<div class="fixed-action-btn" style="bottom: 45px; left: 24px;">
+	  			<a class="btn-floating btn-large red tooltipped" data-position="right" data-delay="50" data-tooltip="Setting">
+	  				<i class="large material-icons">settings</i>
+	  			</a>
+	  			<ul>
+	  				<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+	  				<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+	  				<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+	  				<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+	  			</ul>
+	  		</div>
+	  		<div class="row fill">
+	  			<div class="col l10 s12 m9 fill">
+	  				<div class="map_area fill" >
+	  					<div id="map-canvas"></div>
+	  				</div>
+	  			</div>
 
-      			</div>
-			</div>
-		
-		</main>
-	 	
+	  			<div class="col l2 m3">
+
+	  				<ul class="tabs">
+	  					<li class="tab col s6"><a class="active"href="#underwaylist">Underway[999]</a></li>
+	  					<li class="tab col s6"><a  href="#anchorlist">Anchor[999]</a></li>
+	  				</ul>
+	  				<div id="underwaylist" class="col s12 m12 s12">
+	  					<div class="collection">
+	  						<a href="#!" class="collection-item">Alvin</a>
+	  						<a href="#!" class="collection-item">Alvin</a>
+	  						<a href="#!" class="collection-item">Alvin</a>
+	  						<a href="#!" class="collection-item">Alvin</a>
+	  					</div>
+	  				</div>
+	  				<div id="anchorlist" class="col s12 m12 s12">
+	  					<div class="collection">
+	  						<a href="#!" class="collection-item">Alvin1</a>
+	  						<a href="#!" class="collection-item">Alvin1</a>
+	  						<a href="#!" class="collection-item">Alvin1</a>
+	  						<a href="#!" class="collection-item">Alvin1</a>
+	  					</div>
+	  				</div>
+	  				
+	  			</div>
+	  		</div>
+
+	  	</main>
 
 
-		<script type="text/javascript">
-			$(document).ready(function(){
-				$(".button-collapse").sideNav();
-				$('.modal-trigger').leanModal();
-				$('.tooltipped').tooltip({delay: 50});
 
-				  $(".button-collapse").sideNav();
-				initMap();
+	  	<script type="text/javascript">
+	  		$(document).ready(function(){
+	  			$(".button-collapse").sideNav();
+	  			$('.modal-trigger').leanModal();
+	  			$('.tooltipped').tooltip({delay: 50});
 
-			});
+	  			$(".button-collapse").sideNav();
+	  			$('ul.tabs').tabs();
+	  			initMap();
 
-			function initMap() {
-			  // Create a map object and specify the DOM element for display.
-			  var map = new google.maps.Map(document.getElementById('map-canvas'), {
-			    center: {lat: -34.397, lng: 150.644},
-			    scrollwheel: false,
-			    zoom: 8
-			  });
-			}
+	  		});
 
-			// display search bar slide down
-			$('.activeSearch').on('click', function() {
-				$('#search-nav').slideToggle('slow/400/fast');
-				$('#search').focus();
-			});
-			// close search bar slide
-			$('.closesearch').on('click', function() {
-				$('#search-nav').slideToggle('slow/400/fast');
-				$('#search').val('');
-			});
-		</script>
-    </body>
-  </html>
+	  		function initMap() {
+				  // Create a map object and specify the DOM element for display.
+				  var map = new google.maps.Map(document.getElementById('map-canvas'), {
+				  	center: {lat: -34.397, lng: 150.644},
+				  	scrollwheel: false,
+				  	zoom: 8
+				  });
+				}
+
+				// display search bar slide down
+				$('.activeSearch').on('click', function() {
+					$('#search-nav').slideToggle('slow/400/fast');
+					$('#search').focus();
+				});
+				// close search bar slide
+				$('.closesearch').on('click', function() {
+					$('#search-nav').slideToggle('slow/400/fast');
+					$('#search').val('');
+				});
+			</script>
+		</body>
+		</html>
